--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,44 @@
   <packaging>jar</packaging>
 
   <name>GameAIArena</name>
+  <description>Game AI Arena(GAIA) is a framework which provides common architecture, design and code for competition system through AI programming on game software.</description>
   <url>http://code.google.com/p/gameaiarena/</url>
+  <inceptionYear>2009</inceptionYear>
+  <organization>
+    <name>Washizaki Laboratory, Dept. Computer Science and Engineering, Waseda University</name>
+    <url>http://www.washi.cs.waseda.ac.jp</url>
+  </organization>
+
+  <issueManagement>
+    <system>code.google.com</system>
+    <url>http://code.google.com/p/gameaiarena/issues</url>
+  </issueManagement>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <connection>scm:git:https://code.google.com/p/gameaiarena/</connection>
+    <developerConnection>scm:git:https://code.google.com/p/gameaiarena/</developerConnection>
+    <url>http://code.google.com/p/gameaiarena/source/browse</url>
+  </scm>
+  <developers>
+    <developer>
+      <id>exKAZUu</id>
+      <name>SAKAMOTO Kazunori</name>
+      <email>exkazuu@gmail.com</email>
+      <organization>Washizaki Laboratory, Dept. Computer Science and Engineering, Waseda University</organization>
+      <organizationUrl>http://www.washi.cs.waseda.ac.jp</organizationUrl>
+      <roles>
+        <role>owner</role>
+        <role>developer</role>
+      </roles>
+      <timezone>+9</timezone>
+    </developer>
+  </developers>
 
   <!-- General settings -->
   <properties>
@@ -25,6 +62,11 @@
       <artifactId>junit</artifactId>
       <version>4.10</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>de.huxhorn.sulky</groupId>
