--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
       <artifactId>de.huxhorn.sulky.3rdparty.jlayer</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>11.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
