--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>jp.ac.waseda.cs.washi</groupId>
   <artifactId>GameAIArena</artifactId>
-  <version>1.0.20-SNAPSHOT</version>
+  <version>1.0.20</version>
   <packaging>jar</packaging>
  
   <name>GameAIArena</name>
