--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
           </formats>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>2.7.1</version>
+      </plugin>
     </plugins>
   </reporting>
 </project>
