--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
+        <version>2.7.1</version>
         <configuration>
           <targetJdk>1.6</targetJdk>
         </configuration>
