--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <version>7</version>
   </parent>
 
-  <groupId>net.exkazuu</groupId>
+  <groupId>jp.ac.waseda</groupId>
   <artifactId>GameAIArena</artifactId>
-  <version>1.5.1-SNAPSHOT</version>
+  <version>1.5.4-SNAPSHOT</version>
   <packaging>jar</packaging>
  
   <name>GameAIArena</name>
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.10</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
     <!-- Project specific dependencies -->
