--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>7</version>
   </parent>
 
-  <groupId>net.exkazuu</groupId>
+  <groupId>jp.ac.waseda</groupId>
   <artifactId>GameAIArena</artifactId>
   <version>1.5.1-SNAPSHOT</version>
   <packaging>jar</packaging>
