--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>jp.ac.waseda</groupId>
   <artifactId>GameAIArena</artifactId>
-  <version>1.5.2</version>
+  <version>1.5.3-SNAPSHOT</version>
   <packaging>jar</packaging>
  
   <name>GameAIArena</name>
