--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>7</version>
   </parent>
 
-  <groupId>jp.ac.waseda</groupId>
+  <groupId>net.exkazuu</groupId>
   <artifactId>GameAIArena</artifactId>
   <version>1.5.3-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.10</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
     <!-- Project specific dependencies -->
