[maven-release-plugin] prepare release GameAIArena-1.5.3

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>net.exkazuu</groupId>
   <artifactId>GameAIArena</artifactId>
-  <version>1.5.3-SNAPSHOT</version>
+  <version>1.5.3</version>
   <packaging>jar</packaging>
  
   <name>GameAIArena</name>
