--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-
 #ignore thumbnails created by windows
 Thumbs.db
+
 #Ignore files build by Visual Studio
 *.obj
 *.user
@@ -23,12 +23,38 @@ Thumbs.db
 *.sbr
 obj/
 [Rr]elease*/
-_ReSharper*/
 [Tt]est[Rr]esult*
 *.opensdf
 *.sdf
 ipch/
+.DS_Store
+
+# Resharper
+_ReSharper*/
+*.docstates
+
+# Maven
 target
+
+# Convention
 output
 download
-*.docstates
+
+# vim
+*.swp
+
+# eclipse
+.settings
+.cache
+.classpath
+
+# emacs
+*~
+\#*#
+
+# project specific
+*.zip
+*.rep
+log/
+*.csv
+*.jar
