--- a/SampleGame/pom.xml
+++ b/SampleGame/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>jp.ac.waseda</groupId>
       <artifactId>GameAIArena</artifactId>
-      <version>1.7.2-SNAPSHOT</version>
+      <version>1.7.2</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
