--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,13 @@
 
   <groupId>jp.ac.waseda</groupId>
   <artifactId>GameAIArena</artifactId>
-  <version>2.1.0</version>
+  <version>3.0.0</version>
   <packaging>jar</packaging>
  
   <name>GameAIArena</name>
   <description>Game AI Arena(GAIA) is a framework which provides common architecture, design and code for competition system through AI programming on game software.</description>
   <url>https://github.com/exKAZUu/GameAIArena</url>
   <inceptionYear>2009</inceptionYear>
-  <organization>
-    <name>National Institute of Informatics</name>
-    <url>https://github.com/exKAZUu</url>
-  </organization>
 
   <issueManagement>
     <system>github.com</system>
@@ -42,8 +38,6 @@
       <id>exKAZUu</id>
       <name>Kazunori SAKAMOTO</name>
       <email>exkazuu@gmail.com</email>
-      <organization>National Institute of Informatics</organization>
-      <organizationUrl>http://www.nii.ac.jp/</organizationUrl>
       <roles>
         <role>owner</role>
         <role>developer</role>
@@ -60,6 +54,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <encoding>UTF-8</encoding>
+
+    <junit.jupiter.version>5.3.1</junit.jupiter.version>
   </properties>
   
   <dependencies>
@@ -67,12 +63,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>18.0</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.6</version>
+      <version>27.0-jre</version>
     </dependency>
     <!-- Test dependencies -->
     <dependency>
@@ -95,23 +86,18 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.6</version>
+        <version>3.1.0</version>
         <configuration>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
-          <archive>
-            <manifest>
-              <mainClass>net.javachallenge.Main</mainClass>
-            </manifest>
-          </archive>
         </configuration>
         <executions>
           <execution>
             <id>make-assembly</id>
             <phase>package</phase>
             <goals>
-              <goal>attached</goal>
+              <goal>single</goal>
             </goals>
           </execution>
         </executions>
@@ -121,7 +107,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.4</version>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -136,7 +122,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.3</version>
+        <version>3.0.1</version>
         <configuration>
           <links>
             <link>http://download.oracle.com/javase/8/docs/api/</link>
@@ -153,36 +139,6 @@
       </plugin>
     </plugins>
   </build>
-  
-  <profiles>
-    <profile>
-      <id>release-sign-artifacts</id>
-      <activation>
-        <property>
-          <name>performRelease</name>
-          <value>true</value>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.6</version>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
   <reporting>
     <plugins>
@@ -190,14 +146,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
-        <version>2.5</version>
+        <version>3.0.0</version>
       </plugin>
 
       <!-- Generating FindBugs report -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
-        <version>3.0.2</version>
+        <version>3.0.5</version>
       </plugin>
 
       <!-- Generating test coverage(cobertura) report -->
